--- a/.github/workflows/blue-green.yml
+++ b/.github/workflows/blue-green.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  AWS_REGION: ap-northeast-2
+  AWS_REGION: us-east-1
   ECR_REPOSITORY: acc-cicd
   IMAGE_TAG: latest
 
@@ -28,6 +28,8 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          region: ${{ env.AWS_REGION }}
 
       - name: Build, tag, and push Docker image to ECR
         run: |
